--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description         : >-
                       "I turn coffee :coffee: into code,
                       use tabs over spaces
                       and never broke production."
-baseurl             : "/koftezz.github.io"                     # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
+baseurl             : "koftezz.github.io"                     # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
 repository          : koftezz/koftezz.github.io     # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
 remote_theme        : YoussefRaafatNasry/portfolYOU
 
