--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,15 +1,17 @@
-- title: Student, Harvard CS
+- title: Junior Data Scientist, Invent Analytics, TR
+  from: 2018
+  to: Present
+  description: Performing big data analysis, feature engineering. Building algorithms by developing
+               predictive models using various machine learning techniques.
+
+- title: M.Sc. Student, Özyeğin University, TR
+  from: 2019
+  to: present
+  description: M.Sc. In Industrial Engineering
+
+- title: B.Sc. Student, Özyeğin University, TR
   from: 2014
   to: 2018
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-               nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-               reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-
-- title: Software Engineer, Google, UK
-  from: 2018
-  to: present
   description: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
