--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,15 +1,15 @@
-- title: Junior Data Scientist, Invent Analytics, TR
+- title: Junior Data Scientist, [Invent Analytics](https://www.inventanalytics.com/), TR
   from: 2018
   to: Present
   description: Performing big data analysis, feature engineering. Building algorithms by developing
                predictive models using various machine learning techniques.
 
-- title: M.Sc. Student, Özyeğin University, TR
+- title: M.Sc. Student, [Özyeğin University](https://www.ozyegin.edu.tr/en), TR
   from: 2019
   to: present
   description: M.Sc. In Industrial Engineering
 
-- title: B.Sc. Student, Özyeğin University, TR
+- title: B.Sc. Student, [Özyeğin University](https://www.ozyegin.edu.tr/en), TR
   from: 2014
   to: 2018
   description: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
