--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,19 +1,16 @@
-- title: Junior Data Scientist, Invent Analytics(https://www.inventanalytics.com/), TR
+- title: Junior Data Scientist, Invent Analytics, TR
   from: 2018
   to: Present
   description: Performing big data analysis, feature engineering. Building algorithms by developing
                predictive models using various machine learning techniques.
 
-- title: M.Sc. Student, Özyeğin University(https://www.ozyegin.edu.tr/en), TR
+- title: M.Sc. Student, Özyeğin University, TR
   from: 2019
   to: present
   description: M.Sc. In Industrial Engineering
 
-- title: B.Sc. Student, Özyeğin University(https://www.ozyegin.edu.tr/en), TR
+- title: B.Sc. Student, Özyeğin University, TR
   from: 2014
   to: 2018
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-               nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-               reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+  description: Teaching Assistant for BUS101 Course: Attended lab sessions, Prepared exam/assignment questions
+               and cases using VBA
