--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -12,5 +12,5 @@
 - title: B.Sc. Student, Özyeğin University, TR
   from: 2014
   to: 2018
-  description: Teaching Assistant for BUS101 Course: Attended lab sessions, Prepared exam/assignment questions
+  description: Teaching Assistant for BUS101 Course; Attended lab sessions, Prepared exam/assignment questions
                and cases using VBA
