--- a/_data/programming-skills.yml
+++ b/_data/programming-skills.yml
@@ -1,11 +1,15 @@
-- name: HTML5/CSS3
-  percentage: 90
+- name: SQL
+  percentage: 70
   color: danger
 
-- name: Go
+- name: R
   percentage: 80
   color:
 
 - name: Python
   percentage: 70
   color: dark
+  
+- name: Tableau
+  percentage: 70
+  color: secondary
