--- a/_data/other-skills.yml
+++ b/_data/other-skills.yml
@@ -1,7 +1,7 @@
-- name: Adobe Photoshop
-  percentage: 95
+- name: LaTeX
+  percentage: 80
   color: info
 
-- name: Adobe Illustrator
-  percentage: 90
+- name: Tableau
+  percentage: 70
   color: success
