--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,7 @@
 ### Site Settings ###
-title               : Koftezz
+title               : koftezz
 description         : >-
-                      "I turn coffee :coffee: into code,
-                      use tabs over spaces
-                      and never broke production."
+                      "#TheWorldIsYours."
 baseurl             : "koftezz.github.io"                     # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
 repository          : koftezz/koftezz.github.io     # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
 remote_theme        : YoussefRaafatNasry/portfolYOU
@@ -25,7 +23,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Zeynel Batuhan Organ
-  image             : https://imgur.com/a/PHoASwx
+  image             : https://github.com/koftezz/koftezz.github.io/blob/master/assets/IMG-1282.jpg
   email             : batuhan.organ@ozu.edu.tr
 #  facebook          : your_username
   github            : koftezz
