--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Zeynel Batuhan Organ
-  image             : https://github.com/koftezz/koftezz.github.io/blob/master/assets/IMG-1282.jpg
+  image             : https://github.com/koftezz/koftezz.github.io/blob/master/assets/15801596199016530.png
   email             : batuhan.organ@ozu.edu.tr
 #  facebook          : your_username
   github            : koftezz
