--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -8,6 +8,11 @@
   from: 2019
   to: present
   description: M.Sc. In Industrial Engineering
+  
+- title: Technology & Operations Intern, Nielsen, TR
+  from: 2018, 06
+  to: 2018, 04
+  description: Conducted tasks for company's digitization effort at Technology & Operation Department
 
 - title: B.Sc. Student, Özyeğin University, TR
   from: 2014
