--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,4 +1,4 @@
-- title: Junior Data Scientist, [Invent Analytics](https://www.inventanalytics.com), TR
+- title: Junior Data Scientist, Invent Analytics, TR
   from: 2018
   to: Present
   description: Performing big data analysis, feature engineering. Building algorithms by developing
