--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ author:
   linkedin          : zbatuhanorgan
   medium            : batuhanorgan
 # soundcloud        : your_username
-# spotify           : your_username
+  spotify           : koftezzz
 # stackoverflow     : your_user_id
 # tumblr            : your_username.tumblr.com
 # twitch            : your_username
