--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,9 @@
 ### Site Settings ###
 title               : koftezz
-description         : >-
+description         :
+  - I am a Developer
+  - I work with Go
+  - I love to work with some fun projects
                       #TheWorldIsYours
 baseurl             : ""                     # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
 repository          : koftezz/koftezz.github.io     # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
