--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 ### Site Settings ###
 title               : koftezz
-description         :
+description         : >-
   - I am a Developer
   - I work with Go
   - I love to work with some fun projects
