--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,6 +1,12 @@
+- title: Data Scientist, Invent Analytics, TR
+  from: 2021
+  to: Present
+  description: Performing big data analysis, feature engineering. Building algorithms by developing
+               predictive models using various machine learning techniques.
+
 - title: Junior Data Scientist, Invent Analytics, TR
   from: 2018
-  to: Present
+  to: 2020
   description: Performing big data analysis, feature engineering. Building algorithms by developing
                predictive models using various machine learning techniques.
 
